--- a/WebSocketTCPRelay/WebSocketTCPRelay.csproj
+++ b/WebSocketTCPRelay/WebSocketTCPRelay.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="MSNServer.p12">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
